--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "ngx-toastr": "^9.1.0",
     "rxjs": "^6.0.0",
+    "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
